--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "react-dnd": "16.0.1",
     "react-dnd-html5-backend": "16.0.1",
     "react-hook-form": "7.55.0",
+    "react-router-dom": "6.30.1",
     "react-pdf": "9.1.1",
     "react-popper": "2.3.0",
     "react-resizable-panels": "2.1.7",
